Add google OAuth

--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,8 @@ DB_DATABASE_NAME=postgres
 
 # JWT
 JWT_SECRET=secret
+
+# Google oauth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK=http://localhost:3000/auth/google/callback
